cli/hypercode-rs/tui2/src/status/snapshots/hypercode_tui2__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Hypercode (v0.0.0)                                          │
│                                                                    │
│ Visit https://chatgpt.com/hypercode/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries de │
│  Directory: [[workspace]]                                          │
│  Approval:         on-request                                      │
│  Sandbox:          read-only                                       │
│  Agents.md:        <none>                                          │
│                                                                    │
│  Token usage:      1.9K total  (1K input + 900 output)             │
│  Context window:   100% left (2.25K used / 272K)                   │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
